# HW_20_1

./: .gitignore  category_data.json  manage.py  pyproject.toml
HW_20_1/: asgi.py  settings.py  urls.py  wsgi.py
apps/catalog/: admin.py  apps.py  models.py  urls.py  views.py
apps/catalog/management/commands/: fill_category.py  fill_product.py
apps/catalog/migrations/: 0001_initial.py  0002_alter_product_creation_date_and_more.py  0002_category_created_at.py  0003_contacts.py
apps/catalog/templates/: contacts.html  index.html
apps/main/: urls.py
