[tool.poetry]
name = "hw-20-1"
version = "0.1.0"
description = "HW 20.1 for SkyPro course"
authors = ["satel31 <blokhnina.tatiana@yandex.ru>"]
readme = "README.md"
packages = [{include = "hw_20_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
psycopg = "^3.1.9"
django = "^4.2.1"
python-dotenv = "^1.0.0"
pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
